--- a/styles.css
+++ b/styles.css
@@ -396,7 +396,7 @@ nav > a:hover {
     select the h2 in the third section using the class name selector
 */
 /* ----- */
-.third-h2 {
+form h2 {
     padding: 12px 0;
     background-color: var(--dv-fuchsia);
     color: var(--white);
