--- a/styles.css
+++ b/styles.css
@@ -396,7 +396,7 @@ nav > a:hover {
     select the h2 in the third section using the class name selector
 */
 /* ----- */
-.form h2 {
+.third-h2 {
     padding: 12px 0;
     background-color: var(--dv-fuchsia);
     color: var(--white);
@@ -447,7 +447,7 @@ input:focus {
     select the labels in the form using the tag name/element selector
 */
 /* ----- */
-#form label {
+form label {
     font-size: 1.25rem;
     margin-top: 16px;
 }
