--- a/styles.css
+++ b/styles.css
@@ -336,7 +336,7 @@ span {
     select the unordered list in the navigation using the tag names and child/descendant selector
 */
 /* ----- */
-#nav nav > ul {
+#nav ul {
     display: block;
     list-style-type: none;
     padding: 0;
