--- a/styles.css
+++ b/styles.css
@@ -751,7 +751,7 @@ caption {
     select the table header cells in the table styles section using the element/tag name, descendant, and ID selectors
 */
 /* ----- */
-#table > thead { 
+#table > thead > th { 
     background-color: var(--blue);
     color: var(--white);
 }
