--- a/styles.css
+++ b/styles.css
@@ -867,7 +867,7 @@ table tfoot {
     select the last div in the more styling section using the ID, tag name, descendant, and class selectors
 */
 /* ----- */
-#borders .dashed > div > div > div > div > div {
+#borders .dashed > div:last-child {
     width: 100px;
     height: 100px;
     border: 6px inset var(--dv-lt-blue);
