--- a/styles.css
+++ b/styles.css
@@ -818,7 +818,7 @@ table tfoot {
     select the first div in the border styling section using the ID, tag name and direct descendant selectors
   */
   /* ----- */
-#borders > div:first-child {
+#borders > div {
     width: 300px;
     height: 300px;
     margin: 16px auto;
@@ -831,7 +831,7 @@ table tfoot {
     select the second div in the border styling section using the ID, descendant, and tag name selectors
 */
 /* ----- */
-#borders > div:nth-child(2) {
+#borders > div > div {
     width: 250px;
     height: 250px;
     border: 6px dotted var(--dv-orange);
@@ -843,7 +843,7 @@ table tfoot {
     select the third div in the border styling section using the ID, descendant, and class name selectors
 */
 /* ----- */
-#borders .dashed {
+#borders > div > div > .dashed {
     width: 200px;
     height: 200px;
     border: 6px dashed var(--dv-yellow);
@@ -855,7 +855,7 @@ table tfoot {
     select the fourth div in the pseudo-class styling section using the ID, tag name, descendant, and class selectors
 */
 /* ----- */
-#borders > div:nth-child(4) {
+#borders > div > div > .dashed > div {
     width: 150px;
     height: 150px;
     border: 6px double var(--dv-mint);
@@ -867,7 +867,7 @@ table tfoot {
     select the last div in the more styling section using the ID, tag name, descendant, and class selectors
 */
 /* ----- */
-#borders > div:last-child {
+#borders > div > div > .dashed > div > div {
     width: 100px;
     height: 100px;
     border: 6px inset var(--dv-lt-blue);
